--- a/admin.css
+++ b/admin.css
@@ -32,7 +32,7 @@
     *BOX SHADOW
     */
 
-    --box-shadow: 0 2rem 3rem var(--color-dark-variant);
+    --box-shadow: 0 2rem 2rem rgb(114, 112, 112);
 }
 
 *{
@@ -125,7 +125,7 @@ b{
 }
 
 .success{
-    color: var(--primary-color);
+    color: rgb(100, 223, 100);
 }
 
 .warning{
@@ -256,7 +256,7 @@ main{
 
 main .date{
     display: inline-block;
-    background: rgb(242, 209, 191);
+    background: rgb(248, 238, 238);
     border-radius: 5px;
     margin-top: 1rem;
     padding:  0.5rem 1.6rem;
@@ -274,7 +274,7 @@ main .insights{
 }
 
 main .insights > div{
-    background-color: rgb(241, 223, 214);
+    background-color:  rgb(248, 238, 238);
     padding: var(--card-padding);
     border-radius: var(--card-border-radius);
     margin-top: 1rem;
@@ -381,7 +381,7 @@ main .recent-orders h2{
 }
 
 main .recent-orders table{
-    background: rgb(241, 223, 214);
+    background:  rgb(248, 238, 238);
     width: 100%;
     border-radius: var(--card-border-radius);
     padding: var(--card-padding);
@@ -396,7 +396,7 @@ main .recent-orders table:hover{
 
 main table tbody td{
     border-bottom: 1px solid var(--color-gray);
-    color: var(--color-dark-variant);
+    color: var(--color-dark);
     height: 2.8rem;
 }
 
@@ -410,4 +410,256 @@ main .recent-orders a{
     margin: 1rem auto;
     color: var(--color-dark);
     font-size: 14px;
+}
+
+/*
+*RECENT UPDATES TOP PROFILE
+*/
+
+.right{
+    margin-top: 1.4rem;
+}
+
+.right .top{
+    display: flex;
+    justify-content: end;
+    gap: 2rem;
+}
+
+.right .top button{
+    display: none;
+}
+
+.right .theme-toggler{
+    background: var(--info-light-color);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 1.6rem;
+    width: 4.2rem;
+    cursor: pointer;
+    border-radius: var(--border-radius-1);
+}
+
+.right .theme-toggler span{
+    font-size: 1.2rem;
+    width: 50%;
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.right .theme-toggler span.active{
+    background-color: var(--primary-color);
+    border-radius: var(--border-radius-1);
+    color: var(--white);
+}
+
+.right .top .profile{
+    display: flex;
+    gap: 2rem;
+    text-align: right;
+}
+/*
+*END OF RECENT UPDATES PROFILE
+*/
+
+/*
+* RECENT UPDATES SECTION
+*/
+
+.right .recent-updates{
+    margin-top: 1rem;
+}
+
+.right .recent-updates h2{
+    margin-bottom: .8rem;
+}
+
+.right .recent-updates .updates{
+    background-color:  rgb(248, 238, 238);
+    padding: var(--card-padding);
+    border-radius: var(--card-border-radius);
+    box-shadow: var(--box-shadow);
+    transition: all 300ms ease;
+}
+
+.right .recent-updates .updates:hover{
+    box-shadow: none;
+}
+
+.right .recent-updates .updates .update{
+    display: grid;
+    grid-template-columns: 2.6rem auto;
+    gap: 1rem;
+    margin-bottom: 1rem;
+}
+
+/*
+* END OF RECENT UPDATES SECTION
+*/
+
+/*
+*BEGINNNING OF SALES ANALYTICS SECTION
+*/
+.right .sales-analytics{
+    margin-top: 2rem;
+}
+
+.right .sales-analytics h2{
+    margin-bottom: .8rem;
+}
+
+.right .sales-analytics .item{
+    background-color: rgb(248, 238, 238);
+    display: flex;
+    align-items: center;
+    gap: 1rem;
+    margin-bottom: 0.7rem;
+    padding: 1.4rem var(--card-padding);
+    border-radius: var(--border-radius-3);
+    box-shadow: var(--box-shadow);
+    transition: all 300ms ease;
+}
+
+.right .sales-analytics .item:hover{
+    box-shadow: none;
+}
+
+.right .sales-analytics .item .right{
+    display: flex;
+    justify-content: space-between;
+    align-items: start;
+    margin: 0;
+    width: 100%;
+}
+
+.right .sales-analytics .item .icon{
+    padding: .6rem;
+    color: var(--white);
+    border-radius: 50%;
+    background-color: var(--primary-color);
+    display: flex;
+}
+
+.right .sales-analytics .item.offline .icon{
+    background-color: rgb(228, 39, 39);
+}
+
+.right .sales-analytics .item.customers .icon{
+    background-color:  rgb(29, 193, 29);
+}
+
+.right .sales-analytics .add-product{
+    background: rgb(248, 238, 238);
+    border: 2px dashed var(--primary-color);
+    color: var(--primary-color);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.right .sales-analytics .add-product div{
+    display: flex;
+    align-items: center;
+    gap: .5rem;
+}
+
+.right .sales-analytics .add-product div h3{
+    font-weight: 600;    
+}
+
+/*
+* MEDIA QUERIES FOR THE VARIOUS SCREEN
+*/
+
+@media screen and (max-width: 1200px){
+    .container{
+        width: 94%;
+        grid-template-columns: 7rem auto 23rem ;
+    }
+
+    aside.logo h2{
+      display: none;
+    }  
+
+    aside .sidebar h3{
+        display: none;
+    }
+
+    aside .sidebar a{
+        width: 5.6rem;
+    }
+
+    aside .sidebar a:last-child{
+        position: relative;
+        margin-top: 1.8rem;
+    }
+
+    aside .insights{
+        grid-template-columns: 1fr;
+        gap: 0;
+    }
+
+    main .recent-orders{
+        width: 94%;
+        position: absolute;
+        left: 50%;
+        transform: translateX(-50%);
+        margin:  2rem 0 0 8.8rem;
+    }
+
+    main .recent-orders table{
+        width: 83vw;
+    }
+
+    main table thead tr th:last-child,
+    main table thead tr th:first-child{
+        display: none;
+    }
+
+    main table tbody tr td:last-child,
+    main table tbody tr td:first-child{
+        display: none;
+    }
+}
+
+/*
+* MEDIA QUERIES FOR MOBILE 
+*/
+
+@media screen and (max-width: 768px) {
+    .container{
+        width: 100%;
+    }
+
+    aside{
+        position: fixed;
+        background-color: rgb(248, 238, 238);
+        left: 0;
+        width: 18rem;
+        z-index: 3;
+        box-shadow: 1rem 3rem 4rem var(--box-shadow);
+        height: 100vh;
+        padding-right: var(--card-padding);
+    }
+
+    aside .logo{
+        margin-left: 1rem;
+    }
+
+    aside .logo h3{
+        display: inline;
+    } 
+
+    aside .sidebar a{
+        width: 100%;
+        height: 3.4rem;
+    }
+
+    aside .sidebar a:last-child{
+        position: absolute;
+        top: 0;
+    }
 }
