--- a/admin.css
+++ b/admin.css
@@ -643,6 +643,7 @@ main .recent-orders a{
         box-shadow: 1rem 3rem 4rem var(--box-shadow);
         height: 100vh;
         padding-right: var(--card-padding);
+        display: none;
     }
 
     aside .logo{
@@ -660,6 +661,42 @@ main .recent-orders a{
 
     aside .sidebar a:last-child{
         position: absolute;
+        bottom: 5rem;
+    }
+
+    aside .close{
+        display: inline-block;
+        cursor: pointer;
+    }
+
+    main{
+        margin-top: 8rem;
+        padding: 0 1rem;
+    }
+
+    main .recent-orders{
+        position: relative;
+        margin: 3rem 0 0 0;
+        width: 100%;
+    }
+
+    main .recent-orders table{
+        width: 100%;
+        margin:  0 auto 4rem;
+    }
+
+    .right{
+        width: 94%;
+        margin: 0 auto 4rem;
+    }
+
+    .right .top{
+        position: fixed;
         top: 0;
+        left: 0;
+        align-items: center;
+        padding: 0 .8rem;
+        height: 4.6rem;
+        background: ;
     }
 }
